--- a/src/app/relatorios/relatorios.component.scss
+++ b/src/app/relatorios/relatorios.component.scss
@@ -1,3 +1,13 @@
+.page-tittle{
+    
+    margin-left: 13px;
+    margin-top: 10px;
+  
+}
+.filter{
+    float: right;
+    margin-right: 14px;
+}
 .col-3{
     width: 266px;
     margin-left: 12px;
