--- a/src/app/side-panel/side-panel.component.scss
+++ b/src/app/side-panel/side-panel.component.scss
@@ -9,5 +9,44 @@
     height: 100%;
     box-shadow: $box-shadow;
 
+    .first-side-panel{
+       
+        margin-top: 4em;
+
+        .first-side-menu-list{
+            list-style: none;
+
+            li{
+                padding: 10px;
+
+                a{
+                    text-decoration: none;
+                    margin-left: 12px;
+                }
+
+                &:hover{
+                    background-color: $contentHoverBackgroundColr;
+                    border-radius: 4px;
+                }
+            }
+        }
+    }
+
+    .second-side-panel{
+           
+        margin-top: 3em;
+
+        .second-side-menu-list{
+            list-style: none;
+            
+            li{
+                padding: 10px;
+
+                span{
+                margin-left: 12px;
+                }
+            }
+    }
+}
     
 }
