--- a/src/app/simulators/simulators.component.html
+++ b/src/app/simulators/simulators.component.html
@@ -1,3 +1,6 @@
+<div class="page-tittle">
+    <h2>Simuladores Cadastrados</h2>
+</div>
 <div class="row">
     <div class="col-4" *ngFor="let element of data">
         <div class="card-box">
